Mon Mar 28 02:17:37 EST 2005

	Apply (and fix) background color patch

Sat Mar 26 09:56:23 EST 2005

	Fix some window resize bugs

	Add support for 16 and 256 color xterms.

Sat Mar 26 00:28:58 EST 2005

	Reformat mouse.c

	Apply diff patch

	Apply vpath patch

	Apply electrum's mouse patch (send mouse off code during
	shell escape)

	Mouse can now resize windows

	Mouse can position cursor in menus.  Double-click selects
	an item.  Need to add scroll.

--- JOE 3.3 begins ---

Mon Mar 21 11:56:56 EST 2005

	Fix segfault problem

	Xcol problems in hex mode

	Backspace in overtype mode (picture mode
	needs work).

	Don't use paths which begin with ! as directories.

	Fix more segfault problems: use doswitch instead of doedit.

	Don't lock scratch buffers.

	Run gcc -pedantic

Sun Mar 20 11:54:44 EST 2005

	Hex edit mode

	Do not CD from names on command line

	Support for wheel mouse

Sat Mar 19 17:08:05 EST 2005

	Fix != in math prompt

	Add modifiers to macros

	Improve jmacs
	Jmacs: orphaned buffers were not having locks deleted

	Fix bug where formatting characters working in context display

	ubknd and urun were not checking for read only

	Prompt with latest directory

Fri Mar 18 16:15:19 EST 2005

	Change so that ` up-arrow (or any key) goes to shell.

	Prefer bash over sh for shell.

Thu Mar 17 18:54:06 EST 2005

	Get joe to compile on irix

	Enable .joe_state file

	Document 'backpath' bad parsing

	Put version number in state file

	Save command line file names in joe_state file

	Fix ufilt (broke with irix fix)

	Fix if (-s ...) in perl

	Parse *rc file only once

Wed Mar 16 11:04:19 EST 2005

	Check if system joerc file is newer than local joerc file.

	Fix line number reporting for joerc file errors.

	Add ! operator to math (factorial and logical not)

	Make ~ expansion occur at user level, not low level.
           (otherwise ~ appears in b->name, which screws up
	   many things unless ~ is really part of the file
	   name).
