@@ -33,6 +33,7 @@
 
 /* The current directory */
 
+int bg_prompt;
 int nocurdir;
 unsigned char *current_dir;
 
@@ -92,7 +93,7 @@ static void disppw(BW *bw, int flg)
 
 	/* Generate prompt */
 	w->t->t->updtab[w->y] = 1;
-	genfmt(w->t->t, w->x, w->y, pw->promptofst, pw->prompt, 0);
+	genfmt(w->t->t, w->x, w->y, pw->promptofst, pw->prompt, BG_COLOR(bg_prompt), 0);
 
 	/* Position and size buffer */
 	bwmove(bw, w->x + pw->promptlen - pw->promptofst, w->y);
